--- a/.github/workflows/job_level_file_access.yml
+++ b/.github/workflows/job_level_file_access.yml
@@ -15,3 +15,14 @@ jobs:
       - name: Read File Content
         run: |
           cat output.txt
+
+  tee_stdout_to_file_and_read:
+    name: Tee Stdout to File and Read
+    runs-on: ubuntu-latest
+    steps:
+      - name: Write File Content
+        run: |
+          echo "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." | tee output.txt
+      - name: Read File Content
+        run: |
+          cat output.txt
